blockml/test/valid/03_mea_refs_dim/v4/v4d.dashboard
dashboard: v4d
title: 'sales'
reports:
- title: 'weekly'
  model: v4m
  select:
  - a.mea1
  type: 'table'

