blockml/test/errors/12_chart/e192/e192d.dashboard
dashboard: e192d
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: e192m
  type: 'gauge_linear'
  data:
    value_field: a.dim1
  options:
    color_scheme: unk        


